# axum-htmx-ssr

./: .gitignore  Cargo.toml  package-lock.json  tailwind.config.js
assets/: 404.html
assets/styles/: tailwind-output.css
src/: main.rs
src/public/: routes.rs
src/shared/: config.rs  database.rs
templates/: hello.html
